# encin

./: .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  DoxygenLayout.xml  LICENSE  Makefile  README.md  annotated.html  await_8h_source.html  classes.html  dir_55860486f0a6000ed239ee6a3cadc0c1.html  encin_8h_source.html  files.html  index.html  info_8h_source.html  job_8h_source.html  menudata.js  pool_8h_source.html  queue_8h_source.html  result_8h_source.html  signal_8h_source.html  spawn_8h_source.html  stack_8h_source.html  status_8h_source.html  structencin__job.html  structencin__queue.html  task_8h_source.html
.github/workflows/: build.yml  document.yml
examples/: CMakeLists.txt  copying-files.c  handling-signals.c  runtime-information.c  spawning-tasks.c  web-server.c
include/: encin.h
include/encin/: await.h  info.h  io.h  job.h  pool.h  queue.h  reactor.h  result.h  signal.h  spawn.h  stack.h  status.h  task.h
search/: all_0.html  all_0.js  classes_0.html  classes_0.js  nomatches.html  searchdata.js
src/: io.c  main.c  pool.c  queue.c  reactor.c  result.c  signal.c  stack.c  status.c
